force-app/main/default/objects/Student_Fee__c/fields/SRN_Number__c.field-meta.xml
<CustomField>
    <fullName>SRN_Number__c</fullName>
    <formula>Contact__r.SRN_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SRN Number</label>
    <type>Text</type>
</CustomField>