force-app/main/default/objects/Student_Fee__c/fields/Student_Hostel_Fee__c.field-meta.xml
<CustomField>
    <fullName>Student_Hostel_Fee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student Hostel Fee</label>
    <referenceTo>Student_Fee__c</referenceTo>
    <relationshipLabel>Student Fees (Student Hostel Fee)</relationshipLabel>
    <relationshipName>Student_Hostel_Fee</relationshipName>
    <type>Lookup</type>
</CustomField>