force-app/main/default/objects/Student_Fee__c/fields/Student_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Student_Mobile_Number__c</fullName>
    <label>Student Mobile Number</label>
    <type>Phone</type>
</CustomField>