force-app/main/default/objects/Student_Fee__c/fields/Student_Official_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Student_Official_Email_ID__c</fullName>
    <label>Student Official Email ID</label>
    <type>Email</type>
</CustomField>