force-app/main/default/objects/Student_Fee__c/fields/Student_Personal_Email__c.field-meta.xml
<CustomField>
    <fullName>Student_Personal_Email__c</fullName>
    <label>Student Personal Email</label>
    <type>Email</type>
</CustomField>