force-app/main/default/objects/Student_Fee__c/fields/Student_Quota__c.field-meta.xml
<CustomField>
    <fullName>Student_Quota__c</fullName>
    <formula>TEXT(Contact__r.Quota__c) + &quot; - &quot; + TEXT(Contact__r.Admission_Mode__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Student Quota</label>
    <type>Text</type>
</CustomField>