force-app/main/default/objects/Student_Fee__c/fields/Student_Status__c.field-meta.xml
<CustomField>
    <fullName>Student_Status__c</fullName>
    <formula>TEXT(Contact__r.Student_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Student Status</label>
    <type>Text</type>
</CustomField>