force-app/main/default/objects/Student_Fee__c/fields/Tuition_Premium__c.field-meta.xml
<CustomField>
    <fullName>Tuition_Premium__c</fullName>
    <formula>Actual_Program_Fee__c  + Premium__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tuition + Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>