force-app/main/default/objects/Student_Fee__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Student_Fees</relationshipName>
    <type>Lookup</type>
</CustomField>