force-app/main/default/objects/Student_Fee__c/fields/Year_from_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Year_from_Due_Date__c</fullName>
    <formula>YEAR(Due_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year from Due Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>