force-app/main/default/objects/Student_Fee__c/validationRules/Transport_admin_cannot_modify_all_fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Transport_admin_cannot_modify_all_fields</fullName>
    <active>true</active>
    <errorConditionFormula>AND($Profile.Name ==&apos;Transport Admin&apos;, NOT(IsChanged(  Number_of_Installments__c  )))</errorConditionFormula>
    <errorMessage>Transport admin can Modify only No of times Payment is allowed Field</errorMessage>
</ValidationRule>