force-app/main/default/objects/Student_Fee__c/listViews/Academic_Fee.listView-meta.xml
<ListView>
    <fullName>Academic_Fee</fullName>
    <columns>NAME</columns>
    <columns>Fee_Type__c</columns>
    <columns>SRN_Number__c</columns>
    <columns>Contact__c</columns>
    <columns>School__c</columns>
    <columns>Fee_Payment_Criteria__c</columns>
    <columns>Description__c</columns>
    <columns>Amount__c</columns>
    <columns>Amount_Paid__c</columns>
    <columns>Amount_Pending__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Number_of_Installments__c</columns>
    <columns>Paid_Installments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>Opening Dues</value>
    </filters>
    <label>Opening Dues</label>
</ListView>