force-app/main/default/objects/Student_Fee__c/listViews/RACE.listView-meta.xml
<ListView>
    <fullName>RACE</fullName>
    <columns>Contact__c</columns>
    <columns>Program_Batch__c</columns>
    <columns>Application_Number__c</columns>
    <columns>NAME</columns>
    <columns>Actual_Program_Fee__c</columns>
    <columns>Scholarship__c</columns>
    <columns>Concession__c</columns>
    <columns>Premium__c</columns>
    <columns>Amount__c</columns>
    <columns>Calculated_Total_Amount__c</columns>
    <columns>Amount_Paid__c</columns>
    <columns>Amount_Pending__c</columns>
    <columns>Calculated_Amount_Pending__c</columns>
    <columns>Due_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>School__c</field>
        <operation>contains</operation>
        <value>Excellence</value>
    </filters>
    <label>RACE</label>
    <sharedTo>
        <group>RACE</group>
    </sharedTo>
</ListView>